// Copyright 2019 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package google.cloud.talent.v4beta1;

import "google/api/annotations.proto";
import "google/cloud/talent/v4beta1/common.proto";

option go_package = "google.golang.org/genproto/googleapis/cloud/talent/v4beta1;talent";
option java_multiple_files = true;
option java_outer_classname = "RecruiterResourceProto";
option java_package = "com.google.cloud.talent.v4beta1";
option objc_class_prefix = "CTS";

// Cloud Profile Discovery API definition

// A resource that represents a recruiter.
message Recruiter {
  // Required during recruiter update.
  //
  // Resource name assigned to a recruiter by the API.
  //
  // The format is
  // "projects/{project_id}/tenants/{tenant_id}/recruiters/{recruiter_id}",
  // for example, "projects/api-test-project/tenants/foo/recruiters/bar".
  string name = 1;

  // Required.
  //
  // Client side recruiter identifier, used to uniquely identify the
  // recruiter.
  //
  // The maximum number of allowed characters is 255.
  string external_id = 4;

  // Optional.
  //
  // A map of fields to hold both filterable and non-filterable custom profile
  // attributes that aren't covered by the provided structured fields. See
  // [CustomAttribute][google.cloud.talent.v4beta1.CustomAttribute] for more details.
  //
  // At most 100 filterable and at most 100 unfilterable keys are supported. If
  // limit is exceeded, an error is thrown.
  //
  // Numeric custom attributes: each key can only map to one numeric value,
  // otherwise an error is thrown.
  //
  // String custom attributes: each key can map up to 50 string values. For
  // filterable string value, each value has a byte size of no more than 256B.
  // For unfilterable string values, the maximum byte size of a single key is
  // 64B. An error is thrown for any request exceeding the limit.
  // The maximum total byte size is 10KB.
  //
  // Currently filterable numeric custom attributes are not supported, and
  // they automatically set to unfilterable.
  map<string, CustomAttribute> custom_attributes = 2;

  // Output only. The profile tags this recruiter manages.
  repeated string profile_tags = 3;
}
